实现根据名字获取班级信息
