# api/http/class/class_http.pb.go
@@ -116,6 +116,117 @@ func (x *CreateClassReply) GetId() int64 {
 	return 0
 }
 
+// 获取班级信息
+type GetClassByNameRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+}
+
+func (x *GetClassByNameRequest) Reset() {
+	*x = GetClassByNameRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_http_class_class_http_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetClassByNameRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetClassByNameRequest) ProtoMessage() {}
+
+func (x *GetClassByNameRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_http_class_class_http_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetClassByNameRequest.ProtoReflect.Descriptor instead.
+func (*GetClassByNameRequest) Descriptor() ([]byte, []int) {
+	return file_http_class_class_http_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *GetClassByNameRequest) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+type GetClassByNameReply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Name    string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	Student string `protobuf:"bytes,2,opt,name=student,proto3" json:"student,omitempty"`
+	Teacher string `protobuf:"bytes,3,opt,name=teacher,proto3" json:"teacher,omitempty"`
+}
+
+func (x *GetClassByNameReply) Reset() {
+	*x = GetClassByNameReply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_http_class_class_http_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetClassByNameReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetClassByNameReply) ProtoMessage() {}
+
+func (x *GetClassByNameReply) ProtoReflect() protoreflect.Message {
+	mi := &file_http_class_class_http_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetClassByNameReply.ProtoReflect.Descriptor instead.
+func (*GetClassByNameReply) Descriptor() ([]byte, []int) {
+	return file_http_class_class_http_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *GetClassByNameReply) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *GetClassByNameReply) GetStudent() string {
+	if x != nil {
+		return x.Student
+	}
+	return ""
+}
+
+func (x *GetClassByNameReply) GetTeacher() string {
+	if x != nil {
+		return x.Teacher
+	}
+	return ""
+}
+
 var File_http_class_class_http_proto protoreflect.FileDescriptor
 
 var file_http_class_class_http_proto_rawDesc = []byte{
@@ -128,17 +239,33 @@ var file_http_class_class_http_proto_rawDesc = []byte{
 	0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d,
 	0x65, 0x22, 0x22, 0x0a, 0x10, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x43, 0x6c, 0x61, 0x73, 0x73,
 	0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x03, 0x52, 0x02, 0x69, 0x64, 0x32, 0x71, 0x0a, 0x05, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x12, 0x68,
-	0x0a, 0x0b, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x12, 0x1e, 0x2e,
-	0x68, 0x74, 0x74, 0x70, 0x2e, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74,
-	0x65, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e,
-	0x68, 0x74, 0x74, 0x70, 0x2e, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74,
-	0x65, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1b, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x15, 0x3a, 0x01, 0x2a, 0x22, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x61, 0x73,
-	0x73, 0x2f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x42, 0x20, 0x5a, 0x1e, 0x77, 0x75, 0x7a, 0x69,
-	0x67, 0x6f, 0x77, 0x65, 0x62, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x68, 0x74, 0x74, 0x70, 0x2f, 0x63,
-	0x6c, 0x61, 0x73, 0x73, 0x3b, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x33,
+	0x03, 0x52, 0x02, 0x69, 0x64, 0x22, 0x2b, 0x0a, 0x15, 0x47, 0x65, 0x74, 0x43, 0x6c, 0x61, 0x73,
+	0x73, 0x42, 0x79, 0x4e, 0x61, 0x6d, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12,
+	0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61,
+	0x6d, 0x65, 0x22, 0x5d, 0x0a, 0x13, 0x47, 0x65, 0x74, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x42, 0x79,
+	0x4e, 0x61, 0x6d, 0x65, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
+	0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x18, 0x0a,
+	0x07, 0x73, 0x74, 0x75, 0x64, 0x65, 0x6e, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07,
+	0x73, 0x74, 0x75, 0x64, 0x65, 0x6e, 0x74, 0x12, 0x18, 0x0a, 0x07, 0x74, 0x65, 0x61, 0x63, 0x68,
+	0x65, 0x72, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x74, 0x65, 0x61, 0x63, 0x68, 0x65,
+	0x72, 0x32, 0xe9, 0x01, 0x0a, 0x05, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x12, 0x68, 0x0a, 0x0b, 0x43,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x12, 0x1e, 0x2e, 0x68, 0x74, 0x74,
+	0x70, 0x2e, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x43, 0x6c,
+	0x61, 0x73, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x68, 0x74, 0x74,
+	0x70, 0x2e, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x43, 0x6c,
+	0x61, 0x73, 0x73, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x15,
+	0x3a, 0x01, 0x2a, 0x22, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x2f, 0x63,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x76, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x43, 0x6c, 0x61, 0x73,
+	0x73, 0x42, 0x79, 0x4e, 0x61, 0x6d, 0x65, 0x12, 0x21, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x63,
+	0x6c, 0x61, 0x73, 0x73, 0x2e, 0x47, 0x65, 0x74, 0x43, 0x6c, 0x61, 0x73, 0x73, 0x42, 0x79, 0x4e,
+	0x61, 0x6d, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1f, 0x2e, 0x68, 0x74, 0x74,
+	0x70, 0x2e, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x2e, 0x47, 0x65, 0x74, 0x43, 0x6c, 0x61, 0x73, 0x73,
+	0x42, 0x79, 0x4e, 0x61, 0x6d, 0x65, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x20, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x1a, 0x3a, 0x01, 0x2a, 0x22, 0x15, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x61, 0x73,
+	0x73, 0x2f, 0x67, 0x65, 0x74, 0x5f, 0x62, 0x79, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x42, 0x20, 0x5a,
+	0x1e, 0x77, 0x75, 0x7a, 0x69, 0x67, 0x6f, 0x77, 0x65, 0x62, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x68,
+	0x74, 0x74, 0x70, 0x2f, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x3b, 0x63, 0x6c, 0x61, 0x73, 0x73, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -153,16 +280,20 @@ func file_http_class_class_http_proto_rawDescGZIP() []byte {
 	return file_http_class_class_http_proto_rawDescData
 }
 
-var file_http_class_class_http_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_http_class_class_http_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_http_class_class_http_proto_goTypes = []interface{}{
-	(*CreateClassRequest)(nil), // 0: http.class.CreateClassRequest
-	(*CreateClassReply)(nil),   // 1: http.class.CreateClassReply
+	(*CreateClassRequest)(nil),    // 0: http.class.CreateClassRequest
+	(*CreateClassReply)(nil),      // 1: http.class.CreateClassReply
+	(*GetClassByNameRequest)(nil), // 2: http.class.GetClassByNameRequest
+	(*GetClassByNameReply)(nil),   // 3: http.class.GetClassByNameReply
 }
 var file_http_class_class_http_proto_depIdxs = []int32{
 	0, // 0: http.class.Class.CreateClass:input_type -> http.class.CreateClassRequest
-	1, // 1: http.class.Class.CreateClass:output_type -> http.class.CreateClassReply
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	2, // 1: http.class.Class.GetClassByName:input_type -> http.class.GetClassByNameRequest
+	1, // 2: http.class.Class.CreateClass:output_type -> http.class.CreateClassReply
+	3, // 3: http.class.Class.GetClassByName:output_type -> http.class.GetClassByNameReply
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -198,6 +329,30 @@ func file_http_class_class_http_proto_init() {
 				return nil
 			}
 		}
+		file_http_class_class_http_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetClassByNameRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_http_class_class_http_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetClassByNameReply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -205,7 +360,7 @@ func file_http_class_class_http_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_http_class_class_http_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
